# TheMainModulesQT

./: CMakeLists.txt  main.cpp
